--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.1",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "@types/three": "^0.158.3",
     "install": "^0.13.0",
     "npm": "^10.2.3",
@@ -20,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "three": "^0.158.0",
+    "typescript": "^5.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
