--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
         "jsx": "react-jsx"
     },
     "include": [
-        "src"
+        "src",
+        "@types/svg.d.ts",
+        "@types/emotion.d.ts"
     ]
 }
